--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table cellspacing="30">
     <td><img src="IMG_1345.jpeg" alt="Glastonbury" /></td>
     <td>
-      <h1><strong><u>Chris Davies</u></strong></h1>
+      <h1><strong><u>Chris</u></strong></h1>
       <p>
         <em>Learning to build his first website</em>
       </p>
